--- a/src/config/parts/views/index.html
+++ b/src/config/parts/views/index.html
@@ -6,6 +6,5 @@
 </head>
 <body>
     <div id="root"></div>
-    <script src="/static/common.bundle.js"></script>
-</body>
+<script type="text/javascript" src="/static/common.bundle.js"></script></body>
 </html>
